# unicstring

./: .gitignore  CMakeLists.txt  Config.h.in  README  Version.txt
API/UniCString/: UniCString.h
API/UniCString/C/: APIUtils.hpp  UniCError.cpp  UniCError.h  UniCString.cpp  UniCString.h  UniCTypes.h  UniCVersion.cpp  UniCVersion.h
API/UniCString/CXX/: UniCException.detail  UniCException.hxx  UniCString.detail  UniCString.hxx  UniCVersion.hxx
Core/: Common.hpp  Exception.cpp  Exception.hpp  String.cpp  String.hpp  Types.hpp  Unicode.cpp  Unicode.hpp  Utils.cpp  Utils.hpp
Core/Codecs/: CodecBase.hpp  UTF16.cpp  UTF16.hpp  UTF32.cpp  UTF32.hpp  UTF8.cpp  UTF8.hpp
Docs/: doxygen.conf
Tests/API/: UniCString_CXX_Test.cc  UniCString_C_Test.c
Tests/Core/: CoreStringTest.cpp  UTF16CodecTest.cpp  UTF32CodecTest.cpp  UTF8CodecTest.cpp  UnicodeTest.cpp
